Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/Partner_Detail__c.object-meta.xml
<CustomObject>
    <label>Partner Detail</label>
    <nameField>
        <displayFormat>PD-{000}</displayFormat>
        <label>Partner Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>