Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Details</relationshipLabel>
    <relationshipName>Partner_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>