Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Partner Details</relationshipLabel>
    <relationshipName>Partner_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>