Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/fields/Name_of_the_Project_Handled__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Project_Handled__c</fullName>
    <label>Name of the Project Handled</label>
    <length>100</length>
    <type>Text</type>
</CustomField>