Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/recordTypes/Distribution_Partner.recordType-meta.xml
<RecordType>
    <fullName>Distribution_Partner</fullName>
    <active>true</active>
    <label>Distribution Partner</label>
</RecordType>