Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/recordTypes/Project_Partner.recordType-meta.xml
<RecordType>
    <fullName>Project_Partner</fullName>
    <active>true</active>
    <label>Project Partner</label>
</RecordType>