Partial_14Dec2021/force-app/main/default/objects/Partner_Detail__c/recordTypes/Sister_Concern.recordType-meta.xml
<RecordType>
    <fullName>Sister_Concern</fullName>
    <active>true</active>
    <label>Sister Concern</label>
</RecordType>